--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "stripe": "^17.6.0",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
